<resources>
    <string name="app_name">Express Delivery</string>

    <!--Login Activity Strings-->
    <string name="aviso_login_email_invalido">Este email está num formato inválido.</string>
    <string name="aviso_login_email_nao_preenchido">O campo de email não está preenchido.</string>
    <string name="aviso_login_senha_nao_preenchida">O campo de senha não está preenchido.</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="txt_login_email">Usuário</string>
    <string name="txt_login_password">Senha</string>
    <string name="btn_login_entrar">Entrar</string>
    <string name="btn_login_visitar">Visitar</string>
    <string name="btn_login_facebook">Entrar com Facebook</string>
    <!--Login Activity Strings-->

    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="visitar">Visitar</string>
    <string name="email">E-mail</string>
    <string name="street">Logradouro</string>
    <string name="number">Nº</string>
    <string name="complement">Complemento</string>
    <string name="district">Bairro</string>
    <string name="city">Cidade</string>
    <string name="uf">UF</string>
    <string name="zipcode">CEP</string>
    <string name="acc_anuncio">Deseja responder a proposta?</string>
    <string name="add_address">Deseja cadastrar seu endereço para facilitar as entregas?</string>
    <string name="add_address_required">Você precisa cadastrar um endereço para continuar.</string>
    <string name="register_address">Cadastrar Endereço</string>
    <string name="is_register_address">Deseja utilizar seu endereço de cadastro?</string>
    <string name="password_confirm">Confimar Senha</string>
    <string name="cadastro_usuario">Cadastro de Usuário</string>
    <string name="title_activity_cadastro_usuario">Cadastro de Usuários</string>
    <string name="editar">Editar</string>
    <string name="minhas_propostas">Minhas Propostas</string>
    <string name="deletar">Deletar</string>

    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="after">Depois</string>
    <string name="send_mail">Enviar</string>

    <string name="cadastrar">Cadastrar</string>
    <string name="configuracao">Configurações</string>
    <string name="novo_anuncio">Criar um anúncio</string>
    <string name="abrir_anuncio">Abrir</string>
    <string name="salvar_anuncio">Salvar</string>

    <string name="campo_obrigatorio">Campo Obrigatório</string>

    <string name="mensagem_cadastrar">Não tem conta? Crie uma agora.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <string name="title_activity_detalhe_anuncio">Detalhes do Anúncio</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="excluir_anuncio">Excluir Anuncio</string>

    <string name="title_activity_cadastro_anuncio">Cadastro de Anúncios</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="address">Endereço</string>
    <string name="phone">Telefone</string>
    <string name="meus_anuncios">Meus Anúncios</string>

    <string name="fechar">Fechar</string>
    <string name="exit">Sair</string>
    <string name="login">Entrar</string>


    <string name="valor">Valor</string>
    <string name="enviar_proposta">Enviar Proposta</string>
    <string name="title_activity_enviar_proposta">Envio de Proposta</string>

    <string name="title_activity_meus_anuncios">Meus Anúncios</string>
    <string name="title_activity_user_proporsal">Minhas propostas</string>
    <string name="dataAtualizacao">Data da última atualização</string>

    <!-- DANGER AREA -->
    <string name="parse_id">fdP0V6P2q11e6XjAQ6YMlK1ltc7v2uEUCCiL0S54</string>
    <string name="parse_client_key">p7XkIb23IXrMqQJWQCFZrMXShi3yfTwJp2Pj1QK6</string>

    <string name="facebook_app_id">246500365722991</string>

</resources>
