<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage_cadastro_anuncio"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/novo_anuncio" />

        <item
            android:id="@+id/nav_manage_cadastro_usuario"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/mensagem_cadastrar" />

        <item
            android:id="@+id/nav_my_announcements"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/meus_anuncios" />

        <item
            android:id="@+id/nav_manage_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/exit" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/login" />
    </group>

</menu>
