<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="views.CadastroActivity"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="60"
        android:id="@+id/txtCadUser"
        android:hint="@string/user"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="60"
        android:id="@+id/txtCadMail"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:maxLength="20"
        android:id="@+id/txtCadPassword"
        android:hint="@string/password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:maxLength="20"
        android:id="@+id/txtCadConfirmPassword"
        android:hint="@string/password_confirm"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnCadCadastrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:onClick="logar"
        android:background="@color/colorAccent"
        android:text="@string/cadastrar"/>

</LinearLayout>
