<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/fundo_mar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="#FFFFFF">
                <EditText android:id="@+id/edt_loginactivity_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_login_email"
                    android:textColor="@color/primaryText"
                    android:textSize="18dp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/primaryText">
                <EditText android:id="@+id/edt_loginactivity_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textColor="#FFFFFF"
                    android:hint="@string/txt_login_password"
                    android:textSize="18dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_loginactivity_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:onClick="logIn"
                android:background="@color/black_overlay"
                android:textColor="@color/primaryText"
                android:text="@string/btn_login_entrar"
                android:textSize="18dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_loginactivity_visitar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:onClick="visitar"
                android:background="@color/black_overlay"
                android:textColor="@color/primaryText"
                android:text="@string/btn_login_visitar"
                android:textSize="18dp" />

            <TextView android:id="@+id/link_loginactivity_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:onClick="cadastrar"
                android:text="@string/mensagem_cadastrar"
                android:gravity="center"
                android:textSize="17dp"
                android:textColor="@color/primaryText"
                android:layout_weight="0.39" />

        </LinearLayout>
</ScrollView>