<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDetAnunc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    tools:context="views.AnnouncementDetailsActivity">

    <include layout="@layout/announcement_detail_activity_content"></include>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbProposalSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:onClick="submitProposal"
        fab:fab_icon="@drawable/ic_menu_send"
        fab:fab_colorNormal="#037614"
        fab:fab_colorPressed="#12b31e"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/multiple_actions"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        fab:fab_addButtonColorNormal="#037614"
        fab:fab_addButtonColorPressed="#12b31e"
        fab:fab_addButtonPlusIconColor="#ffffff"
        fab:fab_labelStyle="@style/menu_labls_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fbListProposal"
            android:onClick="showProposal"
            fab:fab_icon="@android:drawable/ic_menu_set_as"
            fab:fab_colorNormal="#037614"
            fab:fab_colorPressed="#12b31e"
            fab:fab_size="mini"
            fab:fab_title="@string/minhas_propostas"

            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fbEditDetAnunc"
            android:onClick="updateAnnouncement"
            fab:fab_icon="@android:drawable/ic_menu_edit"
            fab:fab_colorNormal="#037614"
            fab:fab_colorPressed="#ffffff"
            fab:fab_size="mini"
            fab:fab_title="@string/editar"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fbdelete_announcment"
            android:onClick="removeAnnouncement"
            fab:fab_icon="@android:drawable/ic_menu_delete"
            fab:fab_colorNormal="#037614"
            fab:fab_colorPressed="#12b31e"
            fab:fab_size="mini"
            fab:fab_title="@string/deletar"
            />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
